# tauri-plugin-musickit

./: .gitignore  BUG_REPORT_symbol_visibility.md  Cargo.toml  MusicKitPlugin copy.kt  README.md  api-iife.js  build.rs  package.json
android/: build.gradle.kts
android/src/main/: AndroidManifest.xml
android/src/main/java/: MusicKitPlugin.kt
docs/: BUILD_THIS.md  TAURI_2_PLUGIN.md  TAURI_MOBILE_PLUGIN.md  TAURI_PLUGIN.md
guest-js/: index.ts  package.json  types.ts
ios/: Package.swift  README.md
ios/Frameworks/Tauri.xcframework/: Info.plist
ios/Frameworks/Tauri.xcframework/ios-arm64/Tauri.framework/: Info.plist  Tauri
ios/Sources/: AppleMusicKitPlugin.swift  Models.swift  MusicKitPlugin.swift
macos/: Package.swift
macos/Sources/: Models.swift  MusicKitPlugin.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: appendToQueue.toml  appendTracksToQueue.toml  append_to_queue.toml  authorize.toml  getAuthorizationStatus.toml  getCurrentTrack.toml  getDeveloperToken.toml  getPlaybackState.toml  getQueue.toml  getStorefront.toml  getStorefrontId.toml  getUserToken.toml  get_authorization_status.toml  get_current_track.toml  get_developer_token.toml  get_playback_state.toml  get_queue.toml  get_storefront_id.toml  get_user_token.toml  insertAtPosition.toml  insertTrackAtPosition.toml  insertTrackLast.toml  insertTrackNext.toml  insertTracksAtPosition.toml  insert_at_position.toml  previous.toml  removeFromQueue.toml  removeTrackFromQueue.toml  remove_from_queue.toml  setDeveloperToken.toml  setQueue.toml  setUserToken.toml  setVolume.toml  set_developer_token.toml  set_queue.toml  skipToItem.toml  skip_to_item.toml  unauthorize.toml  updateQueue.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  events.rs  lib.rs  mobile.rs  models.rs
src-tauri/: tauri.conf.json
(+3 files in other folders)
