[package]
name = "tauri-plugin-musickit"
version = "0.2.6"
description = "Tauri plugin for Apple MusicKit integration"
authors = ["Patrick Quinn"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.77.2"
repository = "https://github.com/patrickquinn/tauri-plugin-apple-music-kit"
keywords = ["tauri", "plugin", "apple", "music", "musickit"]
categories = ["api-bindings", "multimedia"]
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri_plugin_musickit"

[lib]
name = "tauri_plugin_musickit"
crate-type = ["lib", "cdylib"]

[dependencies]
tauri = "2.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"

[build-dependencies]
tauri-plugin = { version = "2.3", features = ["build"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
opt-level = "s" # Optimize for size
